# API-Workshop02

./: main.py  pyproject.toml  testes.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  routes.py  schema.py
tests/: test_api.py
