[tool.poetry]
name = "api-workshop02"
version = "0.1.0"
description = ""
authors = ["keitarods <keitarojp@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
taskipy = "^1.12.2"
pytest = "^7.4.4"
httpx = "^0.26.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload"
test = "pytest -v"
kill = "kill -9 $(lsof -t -i:8000)"

